# userinterface

./: .gitignore  README.md  Setup.hs  userinterface.cabal
smoke-test/: Main.hs
src/Graphics/: UI.hs
src/Graphics/UI/: DockWidget.hs  GroupBox.hs  Internal.hs  Label.hs  Layout.hs  MainWindow.hs  MdiArea.hs  MenuBar.hs  TextEdit.hs  Timer.hs  UIVar.hs  Widget.hs
src/Graphics/UI/Internal/: CentralWidgetable.hs  Common.hs  QObject.hs  QString.hs  QTypes.hs  Touchable.hs
src/qtbits/: dockwidget.cpp  entry.cpp  groupbox.cpp  haskell_action.h  haskell_event_glue.cpp  haskell_event_glue.h  label.cpp  layout.cpp  mainwindow.cpp  menubar.cpp  menubar.h  qtbits.pro  string.cpp  textedit.cpp  timer.cpp  widget.cpp
